John Humphreys - Adding actuator endpoints.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-hateoas</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -41,6 +49,17 @@
                to be used during execution.  This lets you set things
                like an external property file and logging file location. -->
           <executable>true</executable>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <excludes>
+            <exclude>application.properties</exclude>
+          </excludes>
         </configuration>
       </plugin>
     </plugins>
