--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=9001
 management.port=9002
 custom.message=This was loaded from our application.properties file!
+management.context-path=/actuator
